--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div class="button-group">
-                <button type="submit">Sign in</button>
+                <button type="button" onclick="window.location.href='dashboard.html'">Sign in</button>
                 <button type="button" class="register-btn" onclick="window.location.href='register.html'">Register</button>
             </div>
         </form>
