--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <script type="module" src="/backend/register.js"></script>
 </head>
 <body>
     <div class="register-container">
         <h2>Register</h2>
         <form>
+            <!--make username field-->4
+            <div class="input-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
             <div class="input-group">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
