--- a/frontend/register.html
+++ b/frontend/register.html
@@ -15,6 +15,18 @@
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
             </div>
+            <div class="input-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="input-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="input-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password" required>
+            </div>
             <div class="button-group">
                 <button type="submit">Submit</button>
             </div>
